--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,17 +1,27 @@
 <br>
 <div class="row">
   <div class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-1">
-    <h2>Formulario de login</h2>
-    <form (ngSubmit)="onSignin(f)" #f="ngForm">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" class="form-control" ngModel required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" class="form-control" minlength="6" ngModel required>
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Sign in</button>
-    </form>
+    <div class="divUser">
+      <br>
+      <h2>Formulario de login</h2>
+      <br>
+      <form (ngSubmit)="onSignin(f)" #f="ngForm">
+        <div class="form-group">
+            <div class="col-xs-6 col-xs-offset-3">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" class="form-control" ngModel required>
+        </div>
+        </div>
+        <br>
+        <div class="form-group">
+            <div class="col-xs-6 col-xs-offset-3">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" class="form-control" minlength="6" ngModel required>
+        </div>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Sign in</button>
+      </form>
+    </div>
   </div>
 </div>
