--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,20 +7,20 @@
       <br>
       <form (ngSubmit)="onSignup(f)" #f="ngForm">
         <div class="form-group">
-            <div class="col-xs-6 col-xs-offset-3">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" ngModel required>
-        </div>
+          <div class="col-xs-6 col-xs-offset-3">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" class="form-control" ngModel required>
+          </div>
         </div>
         <br>
         <div class="form-group">
-            <div class="col-xs-6 col-xs-offset-3">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" minlength="6" ngModel required>
-        </div>
+          <div class="col-xs-6 col-xs-offset-3">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" class="form-control" minlength="6" ngModel required>
+          </div>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Sign in</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Sign up</button>
       </form>
     </div>
   </div>
