--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,10 @@
 <br>
 <h1> Welcome to Shop Online!</h1>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4"> Primera columna </div>
+        <div class="col-md-4"> Segunda columna </div>
+        <div class="col-md-4"> Tercera columna </div>
+    </div>
+</div>
