--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,10 +1,31 @@
 <br>
 <h1> Welcome to Shop Online!</h1>
+<br>
 
-<div class="container-fluid">
+<div class="container-fluid" *ngFor="let element of items; let i = index">
     <div class="row">
-        <div class="col-md-4"> Primera columna </div>
-        <div class="col-md-4"> Segunda columna </div>
-        <div class="col-md-4"> Tercera columna </div>
+        <div class="col-md-4">
+            <div *ngIf="i%3==0">
+                <img [src]="element.imgPath" alt="{{ element.name }}" class="img-fluid detail-image-size">
+                <br>
+                {{ element.name }}
+                <br>
+                {{element.prize}}
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div *ngIf="i%3==1">
+                {{ element.name }}
+                <br>
+                {{element.prize}}
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div *ngIf="i%3==2">
+                {{ element.name }}
+                <br>
+                {{element.prize}}
+            </div>
+        </div>
     </div>
 </div>
