--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,11 @@
       </div>
       <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-                  <li class="nav-item" style="cursor: pointer;"><a class="nav-link" routerLink="/signup">Register</a></li>
-                  <li class="nav-item" style="cursor: pointer;"><a class="nav-link" routerLink="/signin">Login</a></li>
+                <li class="nav-item" style="cursor: pointer;"><a class="nav-link" routerLink="/shopping-list"> 
+                    <img src="https://www.shareicon.net/data/128x128/2016/01/18/705400_commerce_512x512.png" class="img-fluid detail-image-size"
+                    style="width:45px; height:45px" ></a></li>
+                <li class="nav-item" style="cursor: pointer;"><a class="nav-link" routerLink="/signup">Register</a></li>
+                <li class="nav-item" style="cursor: pointer;"><a class="nav-link" routerLink="/signin">Login</a></li>
           </ul>
       </div>
   </div>
