--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4">
             <div *ngIf="i%3==0">
-                <img [src]="element.imgPath" alt="{{ element.name }}" class="img-fluid detail-image-size">
+                <img [src]="element.imgPath" alt="{{ element.name }}" class="img-fluid detail-image-size" style="cursor:pointer" routerLink="/item/{{i}}">
                 <br>
                 {{ element.name }}
                 <br>
@@ -15,6 +15,8 @@
         </div>
         <div class="col-md-4">
             <div *ngIf="i%3==1">
+                <img [src]="element.imgPath" alt="{{ element.name }}" class="img-fluid detail-image-size" style="cursor:pointer" routerLink="/item/{{i}}">
+                <br>
                 {{ element.name }}
                 <br>
                 {{element.prize}}
@@ -22,6 +24,8 @@
         </div>
         <div class="col-md-4">
             <div *ngIf="i%3==2">
+                <img [src]="element.imgPath" alt="{{ element.name }}" class="img-fluid detail-image-size" style="cursor:pointer" routerLink="/item/{{i}}">
+                <br>
                 {{ element.name }}
                 <br>
                 {{element.prize}}
