Added button to add the item to shopping list

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -11,6 +11,8 @@
                 {{ element.name }}
                 <br>
                 {{element.prize}}
+                <br>
+                <button type="button" class="btn btn-primary">Add to shopping list</button>
             </div>
         </div>
         <div class="col-md-4">
@@ -20,6 +22,8 @@
                 {{ element.name }}
                 <br>
                 {{element.prize}}
+                <br>
+                <button type="button" class="btn btn-primary">Add to shopping list</button>
             </div>
         </div>
         <div class="col-md-4">
@@ -29,6 +33,8 @@
                 {{ element.name }}
                 <br>
                 {{element.prize}}
+                <br>
+                <button type="button" class="btn btn-primary">Add to shopping list</button>
             </div>
         </div>
     </div>
