--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,6 +2,8 @@
 <h1> Welcome to Shop Online!</h1>
 <br>
 
+<button type="button" class="btn btn-primary" (click)="saveItemsFirebase()" >Firebase</button>
+
 <div class="container-fluid" *ngFor="let element of items; let i = index">
     <div class="row">
         <div class="col-md-4">
