Get users from firebase

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,4 +2,8 @@
   shopping-list works!
 </p>
 
-<button type="button" class="btn btn-primary" (click)="getItemsFirebase()" >Firebase</button>
+<button type="button" class="btn btn-primary" (click)="getItemsFirebase()"> Firebase Items </button>
+
+<button type="button" class="btn btn-primary" (click)="getUsersFirebase()"> Firebase Users </button>
+
+<button type="button" class="btn btn-primary" (click)="getUsersStoraged()"> Firebase Users2 </button>
